# pauli_lcu

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build_and_test.yaml  build_and_test.yml  deploy_to_pypi_test.yml  publish_to_pypi.yaml  publish_to_test_pypi.yaml
src/c/: pauli_decomposition.h  python_bindings.c
src/pauli_lcu/: __init__.py  decomposition.py  tools.py
test/: test_pauli_lcu.py
